--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "koa-bodyparser": "^4.4.1",
     "koa-jwt": "^4.0.4",
     "koa-onerror": "^4.2.0",
+    "moment": "^2.29.4",
     "mongoose": "^8.0.0"
   }
 }
